Fix color and spacing in footer.

--- a/footer.css
+++ b/footer.css
@@ -15,12 +15,12 @@ footer .details i{
 }
 
 footer .details i, p{
-	margin: 10px;
+	margin-right: 10px;
 	display: inline-block;
 }
 
 footer .details p {
-	color: #ddd;
+	color: grey;
 }
 
 footer .details #company {
